src/tests/render_snapshots/snapshots/sabiql__render_snapshots__overlays__help_overlay_narrow_horizontal_scroll.snap
---
source: src/tests/render_snapshots/overlays.rs
expression: output
---
test_project | test_db | - | no dsn | localhost:54
┌ [1] Explor┐[Info] [Cols] [Idx] [FK] [RLS] [Trig]
│> publi╭ Help ───────────────────────────╮──────┐
│  publi│      Open command line         ▲│      │
│  publi│      Exit to Cell Active (draft││      │
│       │                                ││      │
│       │al)                             ││      │
│       │      Execute query             ││      │
│       │      Copy query to clipboard   ┃│      │
│       │      Enter Insert mode         ││      │
│       │      Append at line end        ││      │
│       │↑↓←→  Move cursor               ││──────┘
│       │Home / End  Move by word or line││──────┐
│       │ L    Jump by buffer or viewport││      │
│       │      Close editor              ││      │
│       │      Clear editor              ││      │
│       │      Open Query History        ││      │
│       │                                ││      │
│       │rt)                             ││      │
│       │      Execute query             ▼│      │
│       │ col  26% ◀︎────═════───────────▶︎ │      │
└───────╰ ?/Esc/q Close ──────────────────╯──────┘
h/l / ←→:H-Scroll  ?/Esc/q:Close
